@@ -1,6 +1,6 @@
 /*
  * SonarQube
- * Copyright (C) 2009-2021 SonarSource SA
+ * Copyright (C) 2009-2024 SonarSource SA
  * mailto:info AT sonarsource DOT com
  *
  * This program is free software; you can redistribute it and/or
@@ -19,7 +19,6 @@
  */
 package org.sonar.ce.task.projectanalysis.qualitygate;
 
-import com.google.common.collect.ImmutableMap;
 import java.util.Locale;
 import java.util.Map;
 import javax.annotation.CheckForNull;
@@ -32,7 +31,7 @@ import org.sonar.core.i18n.I18n;
 import static java.util.Objects.requireNonNull;
 
 public final class EvaluationResultTextConverterImpl implements EvaluationResultTextConverter {
-  private static final Map<Condition.Operator, String> OPERATOR_LABELS = ImmutableMap.of(
+  private static final Map<Condition.Operator, String> OPERATOR_LABELS = Map.of(
     Condition.Operator.GREATER_THAN, ">",
     Condition.Operator.LESS_THAN, "<");
 
@@ -48,7 +47,7 @@ public final class EvaluationResultTextConverterImpl implements EvaluationResult
   @CheckForNull
   public String asText(Condition condition, EvaluationResult evaluationResult) {
     requireNonNull(condition);
-    if (evaluationResult.getLevel() == Measure.Level.OK) {
+    if (evaluationResult.level() == Measure.Level.OK) {
       return null;
     }
     return getAlertLabel(condition);
