@@ -1,6 +1,6 @@
 /*
  * SonarQube
- * Copyright (C) 2009-2021 SonarSource SA
+ * Copyright (C) 2009-2024 SonarSource SA
  * mailto:info AT sonarsource DOT com
  *
  * This program is free software; you can redistribute it and/or
@@ -19,13 +19,12 @@
  */
 package org.sonar.db;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import org.sonar.core.platform.Module;
 import org.sonar.db.alm.pat.AlmPatDao;
 import org.sonar.db.alm.setting.AlmSettingDao;
 import org.sonar.db.alm.setting.ProjectAlmSettingDao;
+import org.sonar.db.audit.AuditDao;
 import org.sonar.db.ce.CeActivityDao;
 import org.sonar.db.ce.CeQueueDao;
 import org.sonar.db.ce.CeScannerContextDao;
@@ -40,15 +39,16 @@ import org.sonar.db.component.ComponentKeyUpdaterDao;
 import org.sonar.db.component.ProjectLinkDao;
 import org.sonar.db.component.SnapshotDao;
 import org.sonar.db.duplication.DuplicationDao;
+import org.sonar.db.entity.EntityDao;
 import org.sonar.db.es.EsQueueDao;
 import org.sonar.db.event.EventComponentChangeDao;
 import org.sonar.db.event.EventDao;
+import org.sonar.db.issue.AnticipatedTransitionDao;
 import org.sonar.db.issue.IssueChangeDao;
 import org.sonar.db.issue.IssueDao;
-import org.sonar.db.mapping.ProjectMappingsDao;
+import org.sonar.db.issue.IssueFixedDao;
 import org.sonar.db.measure.LiveMeasureDao;
 import org.sonar.db.measure.MeasureDao;
-import org.sonar.db.measure.custom.CustomMeasureDao;
 import org.sonar.db.metric.MetricDao;
 import org.sonar.db.newcodeperiod.NewCodePeriodDao;
 import org.sonar.db.notification.NotificationQueueDao;
@@ -58,14 +58,22 @@ import org.sonar.db.permission.UserPermissionDao;
 import org.sonar.db.permission.template.PermissionTemplateCharacteristicDao;
 import org.sonar.db.permission.template.PermissionTemplateDao;
 import org.sonar.db.plugin.PluginDao;
+import org.sonar.db.portfolio.PortfolioDao;
+import org.sonar.db.project.ProjectBadgeTokenDao;
 import org.sonar.db.project.ProjectDao;
+import org.sonar.db.project.ProjectExportDao;
 import org.sonar.db.property.InternalComponentPropertiesDao;
 import org.sonar.db.property.InternalPropertiesDao;
 import org.sonar.db.property.PropertiesDao;
+import org.sonar.db.provisioning.GithubOrganizationGroupDao;
+import org.sonar.db.provisioning.GithubPermissionsMappingDao;
 import org.sonar.db.purge.PurgeDao;
+import org.sonar.db.pushevent.PushEventDao;
 import org.sonar.db.qualitygate.ProjectQgateAssociationDao;
 import org.sonar.db.qualitygate.QualityGateConditionDao;
 import org.sonar.db.qualitygate.QualityGateDao;
+import org.sonar.db.qualitygate.QualityGateGroupPermissionsDao;
+import org.sonar.db.qualitygate.QualityGateUserPermissionsDao;
 import org.sonar.db.qualityprofile.ActiveRuleDao;
 import org.sonar.db.qualityprofile.DefaultQProfileDao;
 import org.sonar.db.qualityprofile.QProfileChangeDao;
@@ -73,10 +81,18 @@ import org.sonar.db.qualityprofile.QProfileEditGroupsDao;
 import org.sonar.db.qualityprofile.QProfileEditUsersDao;
 import org.sonar.db.qualityprofile.QualityProfileDao;
 import org.sonar.db.qualityprofile.QualityProfileExportDao;
+import org.sonar.db.report.RegulatoryReportDao;
+import org.sonar.db.report.ReportScheduleDao;
+import org.sonar.db.report.ReportSubscriptionDao;
+import org.sonar.db.rule.RuleChangeDao;
 import org.sonar.db.rule.RuleDao;
 import org.sonar.db.rule.RuleRepositoryDao;
+import org.sonar.db.scannercache.ScannerAnalysisCacheDao;
 import org.sonar.db.schemamigration.SchemaMigrationDao;
+import org.sonar.db.scim.ScimGroupDao;
+import org.sonar.db.scim.ScimUserDao;
 import org.sonar.db.source.FileSourceDao;
+import org.sonar.db.user.ExternalGroupDao;
 import org.sonar.db.user.GroupDao;
 import org.sonar.db.user.GroupMembershipDao;
 import org.sonar.db.user.RoleDao;
@@ -85,20 +101,21 @@ import org.sonar.db.user.SessionTokensDao;
 import org.sonar.db.user.UserDao;
 import org.sonar.db.user.UserDismissedMessagesDao;
 import org.sonar.db.user.UserGroupDao;
-import org.sonar.db.user.UserPropertiesDao;
 import org.sonar.db.user.UserTokenDao;
 import org.sonar.db.webhook.WebhookDao;
 import org.sonar.db.webhook.WebhookDeliveryDao;
 
 public class DaoModule extends Module {
-  private static final List<Class<? extends Dao>> classes = Collections.unmodifiableList(Arrays.asList(
+  private static final List<Class<? extends Dao>> classes = List.of(
     // =====================================================================
     // for readability and easier merge, keep list ordered alphabetically
     // =====================================================================
     ActiveRuleDao.class,
     AnalysisPropertiesDao.class,
+    AnticipatedTransitionDao.class,
     AuthorizationDao.class,
     ApplicationProjectsDao.class,
+    AuditDao.class,
     BranchDao.class,
     CeActivityDao.class,
     CeQueueDao.class,
@@ -108,12 +125,15 @@ public class DaoModule extends Module {
     CeTaskMessageDao.class,
     ComponentDao.class,
     ComponentKeyUpdaterDao.class,
-    CustomMeasureDao.class,
     DefaultQProfileDao.class,
     DuplicationDao.class,
+    EntityDao.class,
     EsQueueDao.class,
     EventDao.class,
     EventComponentChangeDao.class,
+    GithubOrganizationGroupDao.class,
+    GithubPermissionsMappingDao.class,
+    ExternalGroupDao.class,
     FileSourceDao.class,
     GroupDao.class,
     GroupMembershipDao.class,
@@ -125,6 +145,7 @@ public class DaoModule extends Module {
     InternalPropertiesDao.class,
     IssueChangeDao.class,
     IssueDao.class,
+    IssueFixedDao.class,
     LiveMeasureDao.class,
     MeasureDao.class,
     MetricDao.class,
@@ -134,33 +155,44 @@ public class DaoModule extends Module {
     PermissionTemplateDao.class,
     PluginDao.class,
     ProjectDao.class,
+    ProjectBadgeTokenDao.class,
+    ProjectExportDao.class,
+    PortfolioDao.class,
     ProjectLinkDao.class,
-    ProjectMappingsDao.class,
     ProjectQgateAssociationDao.class,
     PropertiesDao.class,
     PurgeDao.class,
+    PushEventDao.class,
     QProfileChangeDao.class,
     QProfileEditGroupsDao.class,
     QProfileEditUsersDao.class,
     QualityGateConditionDao.class,
     QualityGateDao.class,
+    QualityGateGroupPermissionsDao.class,
+    QualityGateUserPermissionsDao.class,
     QualityProfileDao.class,
     QualityProfileExportDao.class,
+    RegulatoryReportDao.class,
+    ReportSubscriptionDao.class,
+    ReportScheduleDao.class,
     RoleDao.class,
     RuleDao.class,
+    RuleChangeDao.class,
     RuleRepositoryDao.class,
     SamlMessageIdDao.class,
-    SnapshotDao.class,
+    ScannerAnalysisCacheDao.class,
     SchemaMigrationDao.class,
+    ScimGroupDao.class,
+    ScimUserDao.class,
+    SnapshotDao.class,
     SessionTokensDao.class,
     UserDao.class,
     UserDismissedMessagesDao.class,
     UserGroupDao.class,
     UserPermissionDao.class,
-    UserPropertiesDao.class,
     UserTokenDao.class,
     WebhookDao.class,
-    WebhookDeliveryDao.class));
+    WebhookDeliveryDao.class);
 
   @Override
   protected void configureModule() {
