@@ -1,6 +1,6 @@
 /*
  * SonarQube
- * Copyright (C) 2009-2021 SonarSource SA
+ * Copyright (C) 2009-2024 SonarSource SA
  * mailto:info AT sonarsource DOT com
  *
  * This program is free software; you can redistribute it and/or
@@ -27,18 +27,22 @@ import org.sonar.db.Dao;
 import org.sonar.db.DatabaseUtils;
 import org.sonar.db.DbSession;
 import org.sonar.db.Pagination;
+import org.sonar.db.audit.AuditPersister;
+import org.sonar.db.audit.model.GroupEditorNewValue;
 import org.sonar.db.user.GroupDto;
+import org.sonar.db.user.SearchGroupMembershipDto;
 
-import static org.sonar.core.util.stream.MoreCollectors.toList;
 import static org.sonar.db.DatabaseUtils.executeLargeInputs;
 import static org.sonar.db.DatabaseUtils.executeLargeUpdates;
 
 public class QProfileEditGroupsDao implements Dao {
 
   private final System2 system2;
+  private final AuditPersister auditPersister;
 
-  public QProfileEditGroupsDao(System2 system2) {
+  public QProfileEditGroupsDao(System2 system2, AuditPersister auditPersister) {
     this.system2 = system2;
+    this.auditPersister = auditPersister;
   }
 
   public boolean exists(DbSession dbSession, QProfileDto profile, GroupDto group) {
@@ -46,37 +50,57 @@ public class QProfileEditGroupsDao implements Dao {
   }
 
   public boolean exists(DbSession dbSession, QProfileDto profile, Collection<GroupDto> groups) {
-    return !executeLargeInputs(groups.stream().map(GroupDto::getUuid).collect(toList()), partition -> mapper(dbSession).selectByQProfileAndGroups(profile.getKee(), partition))
+    return !executeLargeInputs(groups.stream().map(GroupDto::getUuid).toList(), partition -> mapper(dbSession).selectByQProfileAndGroups(profile.getKee(), partition))
       .isEmpty();
   }
 
-  public int countByQuery(DbSession dbSession, SearchGroupsQuery query) {
+  public int countByQuery(DbSession dbSession, SearchQualityProfilePermissionQuery query) {
     return mapper(dbSession).countByQuery(query);
   }
 
-  public List<GroupMembershipDto> selectByQuery(DbSession dbSession, SearchGroupsQuery query, Pagination pagination) {
+  public List<SearchGroupMembershipDto> selectByQuery(DbSession dbSession, SearchQualityProfilePermissionQuery query, Pagination pagination) {
     return mapper(dbSession).selectByQuery(query, pagination);
   }
 
   public List<String> selectQProfileUuidsByGroups(DbSession dbSession, Collection<GroupDto> groups) {
-    return DatabaseUtils.executeLargeInputs(groups.stream().map(GroupDto::getUuid).collect(toList()),
+    return DatabaseUtils.executeLargeInputs(groups.stream().map(GroupDto::getUuid).toList(),
       g -> mapper(dbSession).selectQProfileUuidsByGroups(g));
   }
 
-  public void insert(DbSession dbSession, QProfileEditGroupsDto dto) {
+  public void insert(DbSession dbSession, QProfileEditGroupsDto dto, String qualityProfileName, String groupName) {
     mapper(dbSession).insert(dto, system2.now());
+    auditPersister.addQualityProfileEditor(dbSession, new GroupEditorNewValue(dto, qualityProfileName, groupName));
   }
 
   public void deleteByQProfileAndGroup(DbSession dbSession, QProfileDto profile, GroupDto group) {
-    mapper(dbSession).delete(profile.getKee(), group.getUuid());
+    int deletedRows = mapper(dbSession).delete(profile.getKee(), group.getUuid());
+
+    if (deletedRows > 0) {
+      auditPersister.deleteQualityProfileEditor(dbSession, new GroupEditorNewValue(profile, group));
+    }
   }
 
   public void deleteByQProfiles(DbSession dbSession, List<QProfileDto> qProfiles) {
-    executeLargeUpdates(qProfiles.stream().map(QProfileDto::getKee).collect(toList()), p -> mapper(dbSession).deleteByQProfiles(p));
+    executeLargeUpdates(qProfiles,
+      partitionedProfiles ->
+      {
+        int deletedRows = mapper(dbSession).deleteByQProfiles(partitionedProfiles
+          .stream()
+          .map(QProfileDto::getKee)
+          .toList());
+
+        if (deletedRows > 0) {
+          partitionedProfiles.forEach(p -> auditPersister.deleteQualityProfileEditor(dbSession, new GroupEditorNewValue(p)));
+        }
+      });
   }
 
   public void deleteByGroup(DbSession dbSession, GroupDto group) {
-    mapper(dbSession).deleteByGroup(group.getUuid());
+    int deletedRows = mapper(dbSession).deleteByGroup(group.getUuid());
+
+    if (deletedRows > 0) {
+      auditPersister.deleteQualityProfileEditor(dbSession, new GroupEditorNewValue(group));
+    }
   }
 
   private static QProfileEditGroupsMapper mapper(DbSession dbSession) {
